[package]
name = "docker-image"
version = "0.2.0"
description = "A simple, no_std-compatible Docker image reference parser with strict adherence to Docker's naming rules."
authors = ["Markus Mayer"]
homepage = "https://github.com/sunsided/docker-image-rs"
repository = "https://github.com/sunsided/docker-image-rs"
readme = "README.md"
keywords = ["docker", "parsing", "containers", "validation", "images"]
categories = ["algorithms", "parsing", "no-std"]
license = "EUPL-1.2"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
lazy_static = "1.5.0"
regex = { version = "1.11.1", default-features = false, features = ["unicode-perl"] }
serde = { version = "1.0.218", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.139"
test-format = "0.1.1"

[features]
serde-serialize = ["dep:serde"]
serde-deserialize = ["dep:serde", "serde/std"]
serde = ["serde-serialize", "serde-deserialize"]
